# engine2

./: .gitignore  CMakeLists.txt  Makefile  README.md  archimedes_spiral_parametric_function_controller.cpp  archimedes_spiral_parametric_function_controller.hpp  circle_parametric_function_controller.cpp  circle_parametric_function_controller.hpp  config.cpp  config.ini  controller.cpp  controller.hpp  controller.hpp.gch  ellipse_parametric_function_controller.cpp  ellipse_parametric_function_controller.hpp  enemy_bullet_controller.cpp  enemy_bullet_sprite.cpp  enemy_sprite.cpp  enemy_sprite.hpp  enemy_sprite_ellipsis.cpp  enemy_sprite_sine.cpp  engine2.cppcheck  function_controller.cpp  function_controller.hpp  game_manager.cpp  game_manager.hpp  gdb.md  hero_controller.cpp  hero_controller.hpp  hero_sprite.cpp  hero_sprite.hpp  involute_of_a_circle_parametric_function_controller.cpp  level.cpp  level.hpp  main.cpp  parametric_function_controller.cpp  parametric_function_controller.hpp  path.cpp  path.hpp  path_controller.cpp  (+21 more)
assets/level_maps/: level0.txt
cmake/sdl2/: FindSDL2.cmake
puzzle/: CMakeLists.txt
puzzle/assets/level_maps/: levelfull.txt
puzzle/assets/piece_lists/: level0_pieces.txt
puzzle/src/: death_timer_puzzle_background_hole_controller.cpp  falling_piece_puzzle_background_hole_controller.cpp  o_piece.cpp  oscillate_right_left_puzzle_background_hole_controller.cpp  puzzle_background_hole.cpp  puzzle_level_controller.cpp
puzzle/src/include/: falling_piece_puzzle_background_hole_controller.hpp  o_piece.hpp  oscillate_right_left_puzzle_background_hole_controller.hpp  piece.hpp  piece_controller.hpp  puzzle_background_hole.hpp  puzzle_background_hole_controller.hpp  puzzle_level_controller.hpp
puzzle/src/include/levels/: puzzle_level.hpp
src/: archimedes_spiral_parametric_function_controller.cpp  config.cpp  controller.cpp  dict.cpp  ellipse_parametric_function_controller.cpp  enemy_bullet_controller.cpp  enemy_bullet_sprite.cpp  enemy_sprite.cpp  enemy_sprite_ellipsis.cpp  enemy_sprite_sine.cpp  function_controller.cpp  game_manager.cpp  hero_controller.cpp  hero_sprite.cpp  invaderz_ai_controller.cpp  invaderz_controller.cpp  invaderz_matrix.cpp  involute_of_a_circle_parametric_function_controller.cpp  level.cpp  level_controller.cpp  main.cpp  matrix_of_sprites.cpp  o_piece.cpp  oscillate_right_left_puzzle_background_hole_controller.cpp  parametric_function_controller.cpp  path.cpp  path_controller.cpp  piece.cpp  piece_controller.cpp  player_bullet_controller.cpp  player_bullet_sprite.cpp  primitive_sprite.cpp  puzzle_background_hole.cpp  puzzle_background_hole_controller.cpp  puzzle_level_controller.cpp  real_point.cpp  rectangular_primitive_sprite.cpp  score_text_box.cpp  screen_matrix.cpp  shoot_if_hero_in_range_ai_controller.cpp  (+8 more)
src/include/: config.hpp  death_timer_puzzle_background_hole_controller.hpp  dict.hpp  enemy_bullet_controller.hpp  enemy_bullet_sprite.hpp  enemy_sprite.hpp  enemy_sprite_ellipsis.hpp  enemy_sprite_sine.hpp  falling_piece_puzzle_background_hole_controller.hpp  game_manager.hpp  hero_sprite.hpp  invaderz_ai_controller.hpp  invaderz_controller.hpp  invaderz_matrix.hpp  involute_of_a_circle_parametric_function_controller.hpp  level.hpp  level_controller.hpp  matrix_of_sprites.hpp  o_piece.hpp  oscillate_right_left_puzzle_background_hole_controller.hpp  parametric_function_controller.hpp  path.hpp  piece.hpp  piece_controller.hpp  player_bullet_controller.hpp  player_input.hpp  primitive_sprite.hpp  puzzle_background_hole.hpp  puzzle_background_hole_controller.hpp  puzzle_level_controller.hpp  real_point.hpp  score_text_box.hpp  screen_matrix.hpp  shoot_if_hero_in_range_ai_controller.hpp  sprite.hpp  textured_sprite.hpp  ui_dynamic_text_box.hpp  ui_static_text_box.hpp  ui_text.hpp  ui_text_box.hpp  (+1 more)
src/include/levels/: invaderz_matrix_level.hpp  puzzle_level.hpp  sine_enemies_level.hpp
src/levels/: invaderz_matrix_level.cpp  puzzle_level.cpp  sine_enemies_level.cpp
